--- a/src/app/shared/components/slidemenu/slidemenu.component.scss
+++ b/src/app/shared/components/slidemenu/slidemenu.component.scss
@@ -27,7 +27,8 @@
 
 .header-only {
   @extend %content-with-header;
-  z-index: 10;
+  z-index: 11;
+  display: block;
   position: relative;
 }
 
